# quansys

./: .gitignore  404.html  LICENSE  README.md  build-docs.sh  index.html  mkdocs.yml  objects.inv  playground.py  playground_aedt.py  pyproject.toml  serve-docs.sh  sitemap.xml  testing_sweep.py
.github/workflows/: deploy.yml
api/design_variable_builder/: index.html
api/eigenmode_analysis/: index.html
api/eigenmode_results/: index.html
api/execute_workflow/: index.html
api/function_builder/: index.html
api/module_builder/: index.html
api/prepare_folder_config/: index.html
api/pyaedt_file_parameters/: index.html
api/quantum_epr/: index.html
api/quantum_results/: index.html
api/workflow_config/: index.html
configs/: basic_config.yaml  builder_config.yaml
dep/: example.py  prepare.py  run.py  templates.py
docs/: getting_started.md  index.md  install.md
docs/api/: design_variable_builder.md  eigenmode_analysis.md  eigenmode_results.md  execute_workflow.md  function_builder.md  junctions.md  manual_inference.md  modes_and_labels.md  modes_to_labels.md  module_builder.md  order_inference.md  prepare_folder_config.md  pyaedt_file_parameters.md  quantum_epr.md  quantum_results.md  workflow_config.md
docs/api/builder/: design_variable_builder.md  module_builder.md
docs/api/results/: eigenmode_results.md  quantum_results.md
docs/api/workflow/: workflow_config.md
docs/guides/: automation.md  automation_4o.md  automation_oldold.md  automation_with_context_2.md  best_practices.md  customization.md  installation.md  quickstart.md  simulations.md  terminal.md
docs/stylesheets/: blue-velvet.css  noir-minimal.css
examples/: config.yml  simple_design.aedt
examples/DebugExampleEyal/: DRS_NonSymmetricPurcell_DoubleCavity2024.aedt  config.yaml
examples/cavity_and_chip/: CavityAndChip.aedt  TwoModeShroom_smooth_meander_2024 - Copy.aedt  builder_config.yaml  runfile.py
examples/full_chip/: TwoModeShroom_smooth_meander_2024.aedt  basic_config.yaml  runfile.py
examples/sweep_build_aggregate/: chip.py  config.yaml  runfile.py
examples/sweep_build_eigen_driven/: chip.py
examples_old/DebugExampleEyal/: DRS_NonSymmetricPurcell_DoubleCavity2024.aedt
examples_old/cavity_and_chip/: CavityAndChip.aedt  builder_config.yaml
examples_old/sweep_build_aggregate/: double_cavity_design.py  runfile.py
examples_old/sweep_build_eigen_driven/: chip.py
guides/automation/: index.html
guides/best_practices/: index.html
guides/simulations/: index.html
guides/terminal/: index.html
install/: index.html
old/with_drer/: chip.py  config.yaml  double_cavity_design.py
search/: search_index.json
src/pyhfss/: __init__.py
src/pyhfss/cli/: main.py  (+4 more)
src/pysubmit/: __init__.py
stylesheets/: noir-minimal.css
tests/: conftest.py  design_loader.py  test_builder.py  test_eigenmode.py  test_mode_and_labels.py  test_quantum_epr.py  test_tutorial_notebooks.py  test_workflow.py
tests/resources/: transmon_purcell_readout.aedt
tutorial/: 01_simulations.ipynb  02_quantum_epr.ipynb  03_builder.ipynb  04_sweeper.ipynb  05_data_handler.ipynb  06_workflow.ipynb  simple_design_readout.aedt  simulations.py
tutorial/builder_scripts/: script_builder_function.py
tutorial/configs/: workflow_config_example.yaml
tutorial/designs/: simple_design.aedt
with_drer/: chip.py  config.yaml  runner.py
(+271 files in other folders)
