[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "quansys/examples/*.aedt",
    "quansys/examples/*.yml",
]

[project]
name = "quansys"
version = "3.0.0"
dependencies = [
    "qutip",
    "pyaedt[all]",
    "pint",
    "h5py>=3.12.1",
    "pandas>=2.2.3",
    "pydantic_yaml", # Added typer as a dependency
    "typer",
    "pytest>=8.3.4",
    "pykit @ git+https://github.com/HutoriHunzu/pykit.git",
    "nbmake"

]
requires-python = ">=3.11"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]

license = { text = "MIT" }


[project.optional-dependencies]
mkdocs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocstrings",
    "mkdocstrings-python",
    "pymdown-extensions",
    "ruff"
]

lint = [
    "ruff"
]


[project.scripts]
quansys = "quansys.cli.main:app"

[tool.hatch.metadata]
allow-direct-references = true


filterwarnings = [
    "ignore::DeprecationWarning:defusedxml.*",
    "ignore::DeprecationWarning:ansys.aedt.*",
]


